--- a/templates/analysis1.html
+++ b/templates/analysis1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,8 @@
     <div class="container my-4">
         <p>Hello, welcome to Smart Log Analyzer.</p>
 
-        <!-- Responsive row with spaced buttons -->
+         //Responsive row with spaced buttons 
+
         <div class="row">
             <div class="col-12 col-sm-4 mb-2">
                 <button id="statBtn" type="button" class="btn btn-outline-success w-100">Statistical Analysis</button>
@@ -24,13 +25,14 @@
             </div>
         </div>
 
-        <!-- Content area to be updated -->
+        // Content area to be updated 
+        
         <div id="content" class="my-4">
             <p>Click a button to see something happen!</p>
         </div>
     </div>
 
-    <!-- JavaScript to handle button clicks -->
+    // JavaScript to handle button clicks 
     <script>
     // Get the content area
     const contentArea = document.getElementById("content");
@@ -72,4 +74,4 @@
     });
     </script>
 </body>
-</html>
+</html>  -->
