--- a/templates/result.html
+++ b/templates/result.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -10,4 +10,4 @@
   <p>Shape of the DataFrame: {{ shape }}</p>
   {{ table|safe }}
 </body>
-</html>
+</html> -->
