--- a/templates/result1.html
+++ b/templates/result1.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -6,9 +6,9 @@
   <title>Analysed Data</title>
 </head>
 <body>
-  <h1>Analysed Data</h1>
-  <!-- <p>Shape of the DataFrame: {{ shape }}</p>
-  <p>sample data: {{ sample }}</p>
-  <p>describe : {{ describ }}</p> -->
+  <h1>Analysed Data</h1> 
+  //<p>Shape of the DataFrame: {{ shape }}</p>
+  //<p>sample data: {{ sample }}</p>
+  //<p>describe : {{ describ }}</p> 
 </body>
 </html>
